--- a/index.html
+++ b/index.html
@@ -10,83 +10,60 @@
 <body>
 
     <!--header-->
-    <header>
-        <nav class="navbar navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="border mt-5"></div>
+            </div>
+        </div>
+        <!-- Content here -->
+        <nav class="navbar navbar-dark fixed-top" style="background-color: #E83E8C">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="assets/img/logo.png" width="132px" height="53px"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="assets/img/logo.png" width="132px" height="53px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
-                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
-                      </a>
-                      <ul class="dropdown-menu dropdown-menu-dark">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li>
-                          <hr class="dropdown-divider">
+                        <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
+                    </ul>
                     </li>
-                  </ul>
-                  <form class="d-flex mt-3" role="search">
+                </ul>
+                <form class="d-flex mt-3" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-success" type="submit">Search</button>
-                  </form>
+                </form>
                 </div>
-              </div>
             </div>
-        </nav>    
-    </header>
+            </div>
+        </nav>
+    </div>   
 
     <!--contenedor-->
-    <div class="container py-5">
+    <div class="container mt-5">
         <h2 class="mb-4 text-center">Mis tarjetas</h2>
-        <div class="row align-items-start">
-            <div class="col">
-                <p>hola</p>
-
-                <!--card-1-->
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/img/colaciones.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Colaciones</h5>
-                        <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                        </ul>
-                    <div class="card-body">
-                        <a href="#" class="card-link">Ver más</a>
-                        <a href="#" class="card-link">Comprar</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col">
-            One of three columns
-            </div>
-            <div class="col">
-            One of three columns
-            </div>
-        </div>
+        
     </div>
 
         
