--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9a76d912c8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Desafio-Suricata</title>
 </head>
@@ -178,18 +179,23 @@
     </section>
     
     <footer>
-        <div class="text-center">
-            <div class="footer1 row">
-                <div class="col-sm-6 ">
+        <div class="d-none d-lg-block">
+            <div class="footer1 row text-center align-items-center">
+                <div class="col-sm-6">
                     Ahora aceptamos
                 </div>
                 <div class="col-sm-6">
-                Column
-                </div>
-                <div class="footer2 col-sm-12">
-                    <img src="assets/img/logo-footer.png" alt="">
+                    <i class="fa-brands fa-cc-mastercard"></i>
+                    <i class="fa-brands fa-cc-visa"></i>
+                    <i class="fa-brands fa-cc-amex"></i>
+                    <i class="fa-brands fa-cc-diners-club"></i>
+                    <i class="fa-brands fa-cc-paypal"></i>
+                    <i class="fa-brands fa-cc-discover"></i>
                 </div>
             </div>
+        </div>
+        <div class="footer2 col-sm-12 text-center align-items-center">
+                <img src="assets/img/logo-footer.png" alt="">
         </div>
     </footer>
 
