se agregan líneas de comentarios en secciones

--- a/index.html
+++ b/index.html
@@ -178,7 +178,11 @@
         </div>
     </section>
     
+<!--footer-->
+
     <footer>
+
+        <!--cuadro de tarjetas de crédito-->
         <div class="d-none d-lg-block">
             <div class="footer1 row text-center align-items-center">
                 <div class="col-sm-6">
@@ -194,6 +198,8 @@
                 </div>
             </div>
         </div>
+
+        <!--cuadro de icono al pie de pagina-->
         <div class="footer2 col-sm-12 text-center align-items-center">
                 <img src="assets/img/logo-footer.png" alt="">
         </div>
